--- a/index.html
+++ b/index.html
@@ -276,6 +276,15 @@ img {
       </section>
 
       <section>
+            <a target="_bLank"
+                href="https://rank-fortress-digital-agency.github.io/bglocksmithllc-03-22/">https://rank-fortress-digital-agency.github.io/bglocksmithllc-03-22/</a><br>
+            <a target="_bLank"
+                href="http://bglocksmithllc-03-22.s3-website-ap-southeast-1.amazonaws.com/">http://bglocksmithllc-03-22.s3-website-ap-southeast-1.amazonaws.com/</a><br>
+            <a target="_bLank"
+                href="https://enchanting-cupcake-24c579.netlify.app/">https://enchanting-cupcake-24c579.netlify.app/</a>
+      </section>
+
+      <section>
         <!-- WEBSITE EMBED -->
         <iframe src="https://www.bowlinggreenlocksmiths.com/" style="border:0px #ffffff none;" name="" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="100%" allowfullscreen></iframe>
         <!-- MEDIA ROOM -->
